@@ -1,3 +1,10 @@
+2009-02-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-04-05
+	* add python directory
+	* add python/PrescaleService_cfi.py
+	* adjust test/testPrescaleService_cfg.py to reference above *_cfi.py
+
 2008-10-17  Emilio Meschi  <emilio.meschia@cern.ch>
 
 	* tag V00-04-03 (V00-04-02 tags removal of .cfg files)
